CLOSED TREE - Bug 624390 - With GLX, blacklist everything but NVIDIA proprietary driver - r=jmuizelaar, a=joe